--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <div>
 <h2 class="section">Premier League Analysis 2021-2022</h2>
+<h3>Source: https://www.kaggle.com/datasets/vivovinco/20212022-football-team-stats</h3>
 
 <br>
 <div>
