--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div>
 <h2 class="section">Premier League Analysis 2021-2022</h2>
-<h3>Source: https://www.kaggle.com/datasets/vivovinco/20212022-football-team-stats</h3>
+<a href="https://www.kaggle.com/datasets/vivovinco/20212022-football-team-stats">Source: https://www.kaggle.com/datasets/vivovinco/20212022-football-team-stats</a>
 
 <br>
 <div>
