--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <div>
 <h2 class="section">Premier League Analysis 2021-2022</h2>
-<a href="https://www.kaggle.com/datasets/vivovinco/20212022-football-team-stats">Source: https://www.kaggle.com/datasets/vivovinco/20212022-football-team-stats</a>
+    
+Source <a href="https://www.kaggle.com/datasets/vivovinco/20212022-football-team-stats">https://www.kaggle.com/datasets/vivovinco/20212022-football-team-stats</a>
 
 <br>
 <div>
